# solana-program-library

ci/: farm-rpc.Dockerfile
docs/src/: token-upgrade.md
farms/: README.md
farms/farm-client/: Cargo.toml
farms/farm-client/src/: client.rs
farms/farm-ctrl/: Cargo.toml
farms/farm-rpc/: Cargo.toml  swagger.yaml
farms/farm-rpc/src/rpc/: json_rpc.rs
farms/farm-rpc/static/: index.html
farms/farm-sdk/: Cargo.toml
farms/fund/: Cargo.toml
farms/router-main/: Cargo.toml
farms/router-orca/: Cargo.toml
farms/router-raydium/: Cargo.toml
farms/router-saber/: Cargo.toml
farms/vaults/: Cargo.toml
